new colour scheme

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -20,7 +20,7 @@
     position: absolute;
     top: 50px;
     left: 50px;
-    background-color: #4D9509;
+    background-color: #065E60;
 }
 
 .about-card.bg2{
