--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -73,7 +73,7 @@
 
 .intro-bg{
     clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-    background-color: #4D9509;
+    background-color: #065E60;
     width: 100%;
     height: 100%;
     position: absolute;
